--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
    },
    "dependencies": {
       "@tabler/icons": "^1.119.0",
+      "axios": "^1.2.4",
       "react": "^18.2.0",
       "react-dom": "^18.2.0"
    },
